prevent header title and image scroll animation on small screen devices, fix section box-shadow, fix loading percent position, refactoring, styling

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ body {
 body .wrapper {
     height: 100%;
     width: 100%;
-    z-index: 1;
+    z-index: 0;
     position: absolute;
     top: 0;
     left: 0;
@@ -186,7 +186,7 @@ body .wrapper {
 
 section {
     width: 100%;
-    z-index: 1;
+    z-index: 2;
     padding: 50px 0;
 }
 
@@ -240,7 +240,7 @@ section .section-content .section-title-description {
 }
 
 section:nth-child(5) {
-    padding-bottom: 160px;
+    padding-bottom: 60px;
 }
 
 .white-bg {
@@ -252,7 +252,6 @@ section:nth-child(5) {
 /*** HEADER SECTION ***/
 
 header {
-    position: relative;
     background-color: #958f91;
     /* background-image: url(assets/background.jpg); */
     background-image: url(assets/background.jpg), linear-gradient(to bottom, #958f91 0%, #000 100%);
@@ -261,7 +260,6 @@ header {
     background-attachment: fixed;
     background-size: cover;
     /* height: 100%; */
-    z-index: 1;
     width: 100%;
 }
 
@@ -312,9 +310,9 @@ header .header-content h2 {
 }
 
 @media only screen and (max-width: 768px) {
-    header {
+    /* header {
         background-attachment: initial;
-    }
+    } */
 
     header .header-content h1 {
         font-size: 50px;
@@ -806,7 +804,7 @@ nav .nav-content-wrapp #nav-button .box-shadow-none {
 .inner-hex {
     width: 120px;
     height: 120px;
-    z-index: 2;
+    z-index: 3;
     opacity: 0;
     transform: rotateY(60deg);
     transition: all .3s ease-in;
@@ -841,6 +839,12 @@ nav .nav-content-wrapp #nav-button .box-shadow-none {
 
 .inner-hex .color1:hover {
     transition: all .3s;
+}
+
+#skillset .color1 {
+    -webkit-box-shadow: 0 -2px 2px 0 rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 -2px 2px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 -2px 2px 0 rgba(0, 0, 0, 0.3);
 }
 
 /* react */
@@ -1177,7 +1181,7 @@ iframe[src="https://emilbisak.github.io/BitBook/#/"] {
 .project-hex {
     width: 50px;
     height: 50px;
-    z-index: 2;
+    z-index: 3;
     left: -10px;
 }
 
@@ -1434,7 +1438,7 @@ iframe[src="https://emilbisak.github.io/BitBook/#/"] {
 .contact-hex {
     width: 120px;
     height: 120px;
-    z-index: 2;
+    z-index: 3;
     transition: all .9s;
     left: 0;
 }
@@ -1486,7 +1490,7 @@ iframe[src="https://emilbisak.github.io/BitBook/#/"] {
     .contact-item {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 1fr);
-        row-gap: 5px;
+        /* row-gap: 5px; */
     }
 
     .contact-item .contact-linkedin {
@@ -1565,6 +1569,7 @@ footer .footer-content .author-name {
     font-weight: bold;
     padding: 16px 0 0;
     cursor: pointer;
+    text-shadow: 0 -2px 2px rgba(0, 0, 0, 0.3);
 }
 
 footer .footer-content .hide-letters {
@@ -1588,7 +1593,7 @@ footer .footer-content ul li {
     float: left;
     margin-right: 20px;
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 
 footer .footer-content ul li:last-of-type {
@@ -1599,6 +1604,7 @@ footer .footer-content ul li a {
     display: inline-block;
     text-decoration: none;
     color: #eee;
+    text-shadow: 0 -2px 2px rgba(0, 0, 0, 0.3);
 }
 
 footer .footer-content ul li a:hover {
@@ -1645,7 +1651,7 @@ footer .arrow-to-top:hover svg path {
 
     footer .footer-content .author-name {
         width: 100%;
-        z-index: 1;
+        z-index: 2;
         position: relative;
     }
 
@@ -1718,7 +1724,8 @@ footer .arrow-to-top:hover svg path {
     -o-border-radius: 3px;
     border-radius: 3px;
     box-shadow: 3px 3px 7px 0px #000;
-    text-shadow: 0px 3px 10px #000;
+    text-shadow: 0px 2px 5px #000;
+    overflow: hidden;
 }
 
 .loading-holder .inside-bar {
